--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming soon!)</a>
+    <div class="header">
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="#">Download Excursion (Coming soon!)</a>
+    </div>
+    
+
   </body>
 </html>
