--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       <h1>Discover hidden places in the world around you</h1>
       <a href="#">Download Excursion (Coming soon!)</a>
     </div>
+    <div class="content">
+      <video src="resources/videos/excursion.mp4" controls loop autoplay poster="posterimage.jpg">
+        Your browser does not support the video
+      </video>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places like, and recommends new points of interest around you.</p>
+      <img src="resources/images/camp.jpg" alt="Camping">
+    </div>
     
 
   </body>
