--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <p>Excursion remembers places like, and recommends new points of interest around you.</p>
       <img src="resources/images/camp.jpg" alt="Camping">
     </div>
-    
-
+    <div class="footer">
+      <img src="resources/images/phone.png" alt="CellPhone">
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href="#">Download Excursion (Coming soon!)</a>
+      <p>&copy; Excursion</p>
+    </div>
   </body>
 </html>
