--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
     <div class="header">
@@ -16,10 +16,14 @@
       </video>
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places like, and recommends new points of interest around you.</p>
+      <p>
       <img src="resources/images/camp.jpg" alt="Camping">
+      </p>
     </div>
     <div class="footer">
+      <p>
       <img src="resources/images/phone.png" alt="CellPhone">
+      </p>
       <h2>Coming Soon for iPhone and Android</h2>
       <a href="#">Download Excursion (Coming soon!)</a>
       <p>&copy; Excursion</p>
